已修改        EntityGenerator/EntityGenerator.csproj 已修改        EntityGenerator/GeneratorMethod/EntityDALGenrator.cs 已修改        EntityGenerator/SystemSetting/ToolSetting.cs 已修改        EntityGenerator/UI/EntityGenerator.cs 已修改        EntityGenerator/UserSetting.xml Add        EntityGenerator/GeneratorMethod/ControllerGenrator.cs

--- a/EntityGenerator/EntityGenerator.csproj
+++ b/EntityGenerator/EntityGenerator.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="DataBaseType\ConnectOracle.cs" />
     <Compile Include="DataBaseType\FieldMethods.cs" />
+    <Compile Include="GeneratorMethod\ControllerGenrator.cs" />
     <Compile Include="GeneratorMethod\EntityClassGenrator.cs" />
     <Compile Include="GeneratorMethod\EntityDALGenrator.cs" />
     <Compile Include="GeneratorMethod\EntityIDALGenrator.cs" />
