--- a/EntityGenerator/packages.config
+++ b/EntityGenerator/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
+  <package id="jieba.NET" version="0.42.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net472" />
+  <package id="Stanford.NLP.Parser" version="3.9.2.0" targetFramework="net472" />
 </packages>
